--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <title>Clone Discord</title>
 </head>
 <body>
-    <div>CIAO</div>
+    <header>
+        <div class="top-bar">
+            <section class="clearfix container">
+                <div class="col w-20"><img id="logo" src="./img/logo.svg" alt="logo"></div>
+                <div class="col w-60 text-center">
+                    <nav class="top-menu">
+                        <ul>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perchè Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col w-20 text-center"><a class="button white small" href="#">Accedi</a></div>
+            </section>
+        </div>
+        <div class="spotlight">
+            <div class="container">
+                <div class="col w-50 text-center">
+                    <div class="spotlight-content">
+                        <h1 class="spotlight-content">Il tuo posto per parlare</h1>
+                        <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
