--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         <div class="spotlight">
             <div class="container">
                 <div class="col w-50 text-center">
-                    <div class="spotlight-content">
-                        <h1 class="spotlight-content">Il tuo posto per parlare</h1>
+                    <div class="spotlight-content text-center">
+                        <h1 class="spotlight-content text-center">Il tuo posto per parlare</h1>
                         <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    </div>
+                    <div class="bottom-header">
+                        <a class="button white big" href="#"> <span class="arrow">&#129047;</span>  Scarica per Mac </a>
+                        <a class="button black big" href="#">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
             </div>
