--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Clone Discord</title>
 </head>
 <body>
-    <header>
+    <header class="clearfix">
         <div class="top-bar">
             <section class="clearfix container">
                 <div class="col w-20"><img id="logo" src="./img/logo.svg" alt="logo"></div>
@@ -41,5 +41,15 @@
             </div>
         </div>
     </header>
+    <!-- Section-1 -->
+    <section class="clearfix">
+        <div class="container">
+            <div class="col w-65 section-1"></div>
+            <div class="col w-35">
+                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
