--- a/index.html
+++ b/index.html
@@ -41,15 +41,51 @@
             </div>
         </div>
     </header>
-    <!-- Section-1 -->
+    <!-- First-section -->
     <section class="clearfix">
         <div class="container">
-            <div class="col w-65 section-1"></div>
-            <div class="col w-35">
+            <div class="col w-65 first-section"></div>
+            <div class="col w-35 float-right">
                 <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                 <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </div>
     </section>
+    <!-- Second-section -->
+    <section class="clearfix">
+        <div class="container">
+            <div class="col w-35">
+                <h2>Dove trovarsi é facile</h2>
+                <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+            </div>
+            <div class="col w-65 second-section float-right"></div>
+        </div>
+    </section>
+    <!-- Third-section -->
+    <section class="clearfix">
+        <div class="container">
+            <div class="col w-65 third-section"></div>
+            <div class="col w-35 float-right">
+                <h2>Da pochi a un fandom</h2>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
+        </div>
+    </section>
+    <section class="clearfix">
+        <div class="container">
+            <div class="col w-65 float-center ">
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+            </div>
+            <div class="col w-65 fourth-section"></div>
+        </div>
+    </section>
+    <div class="container clearfix">
+        <div class="before-footer text-center">
+            <h2>Pronto a iniziare la tua avventura?</h2>
+        </div>
+        <div><a class="button cyan small text-center" href="#"><span class="arrow">&#129047;</span> Scarica per Mac</a></div>
+    </div>
+    <footer></footer>
 </body>
 </html>
